	to be generated on RHEL-6.
2017-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.12.
2017-06-01 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Purge Bin Logs' ['PG'] command to amand(8).
	* Rewrote the 'DeleteBinlogSequence()' method in 'amand/auto_rotate.cpp'
	to use the 'PURGE BINARY LOGS' SQL statement.
2017-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Modified log rotation algorithm in amand(8) to do snapshot
	generation and log purging in a single pass.
2017-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'amand/auto_rotate.cpp' that caused a segfault
	when rotating relay-bin logs.
2017-06-05 Fred Gleason <fredg@paravelsystems.com>
	* Added sqltorture(1) in 'tests/'.
2017-06-05 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.13.
2017-06-29 Fred Gleason <fredg@paravelsystems.com>
	* Added more specific descriptions for rsync(1) error states.
2017-06-29 Fred Gleason <fredg@paravelsystems.com>
	* Added amanctl(8) in 'amanctl/'.
2017-06-29 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'configure.ac' to allow use of non-category paths for
	include	statements for Qt4.
	* Removed CVS Id tags.
2017-06-29 Fred Gleason <fredg@paravelsystems.com>
	* Added a amanctl(8) man page.
2017-06-29 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.14.
2017-07-21 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'bzip2' dependency in 'aman.spec.in'.
2017-07-21 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.15.
2017-08-08 Fred Gleason <fredg@paravelsystems.com>
	* Added logging to report the snapshot used when setting DB MASTER and
	DB SLAVE states.
2017-08-08 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.16.
2017-08-24 Fred Gleason <fredg@paravelsystems.com>
	* Changed AM_DEFAULT_REPLICATION_TICK_TIMEOUT to 60000.