@@ -100,6 +100,11 @@ MysqlPassword=letmein
 MysqlDataDirectory=/var/lib/mysql
 
 ;
+; A directory in which to save copies of DB snapshots and bin logs.
+;
+;ArchiveDirectory=/var/backups
+
+;
 ; IP address of the network interface to which Rivendell workstations
 ; are attached.
 ;
@@ -142,6 +147,11 @@ MysqlPassword=letmein
 ; The directory that contains the binary and relay logs.
 ;
 MysqlDataDirectory=/var/lib/mysql
+
+;
+; A directory in which to save copies of DB snapshots and bin logs.
+;
+;ArchiveDirectory=/var/backups
 
 ;
 ; IP address of the network interface to which Rivendell workstations
