@@ -296,3 +296,6 @@
 	* Incremented the package version to 0.9.16.
 2017-08-24 Fred Gleason <fredg@paravelsystems.com>
 	* Changed AM_DEFAULT_REPLICATION_TICK_TIMEOUT to 60000.
+2017-08-24 Fred Gleason <fredg@paravelsystems.com>
+	* Added an 'ArchiveDirectory=' directive to the [System<n>] sections
+	of aman.conf(5).
